--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -3,5 +3,16 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    
+    
+      <!-- StartFragment -->
+    <dimen name="Btn_Skip_padding">5dp</dimen>
+    <dimen name="Btn_Margn_Bottom">50dp</dimen>
+    <dimen name="Iv_Dots_Bottom">30dp</dimen>
+    <dimen name="Iv_Dots_Size">10dp</dimen>
+    
+    <!-- LoginFragment  -->
+    <dimen name="Login_Head">50dp</dimen>
+    <dimen name="Login_Text_Size">18sp</dimen>
 
 </resources>
