--- a/res/layout/register_two.xml
+++ b/res/layout/register_two.xml
@@ -108,7 +108,7 @@
         android:textSize="22px" />
 
     <Button
-        android:id="@+id/btn_register_next_step"
+        android:id="@+id/btn_register_next"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25px"
