--- a/res/layout/fragment_mine.xml
+++ b/res/layout/fragment_mine.xml
@@ -9,9 +9,421 @@
         android:id="@+id/fragment_mine_top"
         layout="@layout/fragment_mine_top"
         />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="我的"
+    
+<RelativeLayout 
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="#EEE"
+    android:orientation="vertical" >
+    
+    <!-- person_shape.xml -->
+
+    
+    
+    <LinearLayout
+        android:id="@+id/ly1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/person_shape"
+    android:orientation="vertical" 
+        
+         >
+    <LinearLayout
+        android:id="@+id/myswitch_view"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:background="@drawable/wtbg"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/tv_switch_icon"
+            android:layout_width="40dip"
+            android:layout_height="30dip"
+            android:layout_marginLeft="20dip"
+            android:src="@drawable/qianbao" />
+
+        <TextView
+            android:id="@+id/tv_switch"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dip"
+            android:layout_weight="1"
+            android:text="我的钱包"
+            android:textColor="@color/common_title_454545_color"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:layout_width="40dip"
+            android:layout_height="40dip"
+            android:layout_marginRight="10dip"
+            android:src="@drawable/jiantougren" />
+    </LinearLayout>
+    
+    <View 
+           android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="#DDD"
+        
         />
+    
+    
+    
+    
+    <LinearLayout
+        android:id="@+id/my_techser_ly"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:background="@drawable/wtbg"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/tv_techcher_icon"
+            android:layout_width="40dip"
+            android:layout_height="30dip"
+            android:layout_marginLeft="20dip"
+            android:src="@drawable/mytecher" />
+
+        <TextView
+            android:id="@+id/tv_techer"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dip"
+            android:layout_weight="1"
+            android:text="我的老师"
+            android:textColor="@color/common_title_454545_color"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:layout_width="40dip"
+            android:layout_height="40dip"
+            android:layout_marginRight="10dip"
+            android:src="@drawable/jiantougren" />
+    </LinearLayout>
+    
+    
+       <View 
+           android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="#DDD"
+        
+        />
+    
+    <LinearLayout
+        android:id="@+id/my_shouchang_ly"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:background="@drawable/wtbg"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/tv_shouchang_icon"
+            android:layout_width="40dip"
+            android:layout_height="30dip"
+            android:layout_marginLeft="20dip"
+            android:src="@drawable/mychouchang" />
+
+        <TextView
+            android:id="@+id/tv_shouchang"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dip"
+            android:layout_weight="1"
+            android:text="我的收藏"
+            android:textColor="@color/common_title_454545_color"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:layout_width="40dip"
+            android:layout_height="40dip"
+            android:layout_marginRight="10dip"
+            android:src="@drawable/jiantougren" />
+    </LinearLayout>
+    
+    
+       <View 
+           android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="#DDD"
+        
+        />
+    
+    
+    
+    <LinearLayout
+        android:id="@+id/my_pingjia_ly"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:background="@drawable/wtbg"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/tv_pingjia_icon"
+            android:layout_width="40dip"
+            android:layout_height="30dip"
+            android:layout_marginLeft="20dip"
+            android:src="@drawable/mypingjia" />
+
+        <TextView
+            android:id="@+id/tv_pingjia"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dip"
+            android:layout_weight="1"
+            android:text="我的评价"
+            android:textColor="@color/common_title_454545_color"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:layout_width="40dip"
+            android:layout_height="40dip"
+            android:layout_marginRight="10dip"
+            android:src="@drawable/jiantougren" />
+    </LinearLayout>
+    
+       <View 
+           android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="#DDD"
+      
+        
+        />
+    
+    </LinearLayout>
+       
+       
+    
+    
+    
+       <LinearLayout
+            android:layout_marginTop="20dip"
+        android:id="@+id/ly2"
+        android:layout_below="@id/ly1"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/person_shape"
+    android:orientation="vertical" 
+        
+         >
+    
+    
+       
+        <LinearLayout
+          
+             
+        android:id="@+id/my_xiugaimpwd_ly"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:background="@drawable/wtbg"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/tv_xiugaipwd_icon"
+            android:layout_width="40dip"
+            android:layout_height="30dip"
+            android:layout_marginLeft="20dip"
+            android:src="@drawable/myupdatepwd" />
+
+        <TextView
+            android:id="@+id/tv_xiugaipwd"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dip"
+            android:layout_weight="1"
+            android:text="修改密码"
+            android:textColor="@color/common_title_454545_color"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:layout_width="40dip"
+            android:layout_height="40dip"
+            android:layout_marginRight="10dip"
+            android:src="@drawable/jiantougren" />
+    </LinearLayout>
+    
+       <View 
+           android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="#DDD"
+        
+        />
+    
+    
+    
+       
+       
+       
+              
+       
+        <LinearLayout
+             
+        android:id="@+id/my_yijianfankui_ly"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:background="@drawable/wtbg"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/tv_yijianfankui_icon"
+            android:layout_width="40dip"
+            android:layout_height="30dip"
+            android:layout_marginLeft="20dip"
+            android:src="@drawable/myyijianfankui" />
+
+        <TextView
+            android:id="@+id/tv_yijianfankui"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dip"
+            android:layout_weight="1"
+            android:text="意见反馈"
+            android:textColor="@color/common_title_454545_color"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:layout_width="40dip"
+            android:layout_height="40dip"
+            android:layout_marginRight="10dip"
+            android:src="@drawable/jiantougren" />
+    </LinearLayout>
+    
+       <View 
+           android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="#DDD"
+        
+        />
+       
+       
+       
+       
+       
+       
+         <LinearLayout
+             
+        android:id="@+id/my_jianchangenxin_ly"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:background="@drawable/wtbg"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/tv_jianchangengxin_icon"
+            android:layout_width="40dip"
+            android:layout_height="30dip"
+            android:layout_marginLeft="20dip"
+            android:src="@drawable/myjiancagenxin" />
+
+        <TextView
+            android:id="@+id/tv_jianchangengxin"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dip"
+            android:layout_weight="1"
+            android:text="检查更新"
+            android:textColor="@color/common_title_454545_color"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:layout_width="40dip"
+            android:layout_height="40dip"
+            android:layout_marginRight="10dip"
+            android:src="@drawable/jiantougren" />
+    </LinearLayout>
+    
+       <View 
+           android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="#DDD"
+        
+        />
+       
+       
+       
+       
+       
+       
+       
+       
+       
+         <LinearLayout
+             
+        android:id="@+id/my_guanyuwomen_ly"
+        android:layout_width="match_parent"
+        android:layout_height="50dip"
+        android:background="@drawable/wtbg"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:id="@+id/tv_guanyuwomen_icon"
+            android:layout_width="40dip"
+            android:layout_height="30dip"
+            android:layout_marginLeft="20dip"
+            android:src="@drawable/myguanyuwomen" />
+
+        <TextView
+            android:id="@+id/tv_guanyuwomen"
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dip"
+            android:layout_weight="1"
+            android:text="关于我们"
+            android:textColor="@color/common_title_454545_color"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:layout_width="40dip"
+            android:layout_height="40dip"
+            android:layout_marginRight="10dip"
+            android:src="@drawable/jiantougren" />
+    </LinearLayout>
+    
+       <View 
+           android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="#DDD"
+        
+        />
+       
+      
+           
+           
+           
+       </LinearLayout>
+       
+       
+        <LinearLayout
+            android:layout_below="@+id/ly2"
+            android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+           >
+            
+            <Button 
+             android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="20dip"
+        android:textColor="@color/white"
+        android:text="退出登录"
+        android:background="@drawable/btn_loginout_sl"
+                />
+       
+       
+       
+       </LinearLayout>
+           
+       
+
+</RelativeLayout>
+  
 </LinearLayout>
