--- a/res/layout/fragment_home.xml
+++ b/res/layout/fragment_home.xml
@@ -4,14 +4,245 @@
     android:layout_height="match_parent"
     android:orientation="vertical" 
     android:background="#EBEBEB"
-    >
+    xmlns:app="http://schemas.android.com/apk/res/com.ai.xswdstudent">
+
     <include
         android:id="@+id/fragment_home_top"
-        layout="@layout/fragment_home_top"
-        />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="首页"
-        />
+        layout="@layout/fragment_home_top" />
+    <ScrollView 
+		android:layout_width="fill_parent"
+		android:layout_height="fill_parent"
+		android:scrollbars="none"
+	  >     
+	  <LinearLayout 
+	      android:layout_width="fill_parent"
+	      android:layout_height="fill_parent"
+	      android:orientation="vertical"
+	      >
+       <android.support.v4.view.ViewPager
+            android:id="@+id/pager_ad"
+	        android:layout_width="fill_parent"
+	        android:layout_height="100dp"
+            >
+        </android.support.v4.view.ViewPager>
+        
+        <com.viewpagerindicator.CirclePageIndicator
+            android:id="@+id/indicator_ad"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_gravity="center"
+		    app:fillColor="#fff"
+		    app:pageColor="#ebebeb"
+		    app:strokeColor="#fff"
+		    app:strokeWidth="1dp"
+			>
+            
+        </com.viewpagerindicator.CirclePageIndicator>
+		
+        <LinearLayout 
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
+            android:layout_margin="10dp"
+            android:orientation="horizontal"
+            >
+            <TextView 
+                android:layout_width="0dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="4"
+                android:background="#49b2f3"
+                android:textColor="#fff"
+                android:text="完善个人资料即可在线试听名师课堂哦！"
+                android:textSize="12sp"
+                android:gravity="center"
+                />
+			<TextView 
+			    android:layout_width="0dp"
+			    android:layout_height="fill_parent"
+			    android:layout_weight="1"
+			    android:background="#f78642"
+			    android:drawableBottom="@drawable/plane"
+			    
+			    />
+        </LinearLayout>      
+		<LinearLayout 
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="vertical"
+            android:background="#f9f6e5"
+         	android:padding="10dp"
+		    >
+			<LinearLayout 
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:orientation="horizontal"
+			    >
+	            <LinearLayout 
+		            android:layout_width="0dp"
+		            android:layout_height="wrap_content"
+		            android:orientation="vertical"
+			        android:layout_weight="1"
+			        android:gravity="center"
+	                >
+				    <Button 
+				        android:id="@+id/btntjls"
+				        android:layout_width="66dp"
+				        android:layout_height="66dp"
+						android:background="@drawable/btn_tjls_selector"
+				        />
+	            </LinearLayout>
+	            <LinearLayout 
+		            android:layout_width="0dp"
+		            android:layout_height="wrap_content"
+		            android:orientation="vertical"
+			        android:layout_weight="1"
+			        android:gravity="center"
+	                >
+				    <Button 
+				        android:id="@+id/btntjkc"
+				        android:layout_width="66dp"
+				        android:layout_height="66dp"
+						android:background="@drawable/btn_tjkc_selector"
+				        />
+	            </LinearLayout>
+	            <LinearLayout 
+		            android:layout_width="0dp"
+		            android:layout_height="wrap_content"
+		            android:orientation="vertical"
+			        android:layout_weight="1"
+			        android:gravity="center"
+	                >
+				    <Button 
+				        android:id="@+id/btntjjg"
+				        android:layout_width="66dp"
+				        android:layout_height="66dp"
+						android:background="@drawable/btn_tjjg_selector"
+				        />
+	            </LinearLayout>
+			</LinearLayout>
+			<LinearLayout 
+	            android:layout_width="fill_parent"
+	            android:layout_height="wrap_content"
+	            android:orientation="horizontal"
+	            android:layout_marginTop="20dp"
+			    >
+	            <LinearLayout 
+		            android:layout_width="0dp"
+		            android:layout_height="wrap_content"
+		            android:orientation="vertical"
+			        android:layout_weight="1"
+			        android:gravity="center"
+	                >
+				    <Button
+						android:id="@+id/btnwdkb"
+				        android:layout_width="66dp"
+				        android:layout_height="66dp"
+						android:background="@drawable/btn_wdkb_selector"
+				        />
+	            </LinearLayout>
+			    
+	            <LinearLayout 
+		            android:layout_width="0dp"
+		            android:layout_height="wrap_content"
+		            android:orientation="vertical"
+			        android:layout_weight="1"
+			        android:gravity="center"
+	                >
+				    <Button
+						android:id="@+id/btnwdls"
+				        android:layout_width="66dp"
+				        android:layout_height="66dp"
+						android:background="@drawable/btn_wdls_selector"
+				        />
+	            </LinearLayout>
+
+	            <LinearLayout 
+		            android:layout_width="0dp"
+		            android:layout_height="wrap_content"
+		            android:orientation="vertical"
+			        android:layout_weight="1"
+			        android:gravity="center"
+	                >
+				    <Button 
+				        android:id="@+id/btndbst"
+				        android:layout_width="66dp"
+				        android:layout_height="66dp"
+						android:background="@drawable/btn_dbst_selector"
+				        />
+	            </LinearLayout>
+			</LinearLayout>
+		</LinearLayout>
+		
+		<LinearLayout 
+		    android:layout_width="fill_parent"
+		    android:layout_height="100dp"
+		    android:orientation="horizontal"
+		    android:layout_margin="10dp"
+		    >
+		    <Button 
+		        android:layout_width="0dp"
+		        android:layout_height="fill_parent"
+		        android:layout_weight="1"
+		        android:text="扫描上课"
+		        android:textColor="#444"
+		        android:textSize="14sp"
+		        android:drawableLeft="@drawable/smsk_nor"
+		        android:gravity="center"
+		        android:padding="30dp"
+		        android:background="@drawable/txt_smsk_selector"
+		        />
+		    <Button 
+		        android:layout_width="0dp"
+		        android:layout_height="fill_parent"
+		        android:layout_weight="1"
+		        android:text="作业神器"
+		        android:textColor="#444"
+		        android:textSize="14sp"
+		        android:drawableLeft="@drawable/zysq_nor"
+		        android:gravity="center"
+		        android:padding="30dp"
+		        android:background="@drawable/txt_smsk_selector"
+		        />
+		    
+		</LinearLayout>
+		
+		
+        <LinearLayout 
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/jpkctj"
+            android:layout_marginBottom="10dp"
+            >
+            
+        </LinearLayout>
+        <LinearLayout 
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/delkc"
+		    android:layout_margin="10dp"
+            >
+            
+        </LinearLayout>
+        <LinearLayout 
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/delkc"
+		    android:layout_margin="10dp"
+            >
+            
+        </LinearLayout>
+        <LinearLayout 
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@drawable/delkc"
+		    android:layout_margin="10dp"
+            >
+            
+        </LinearLayout>
+	  </LinearLayout>
+	</ScrollView>        
 </LinearLayout>
