--- a/res/layout/fragmentactivity_main.xml
+++ b/res/layout/fragmentactivity_main.xml
@@ -11,7 +11,21 @@
         android:layout_height="0dip"
         android:layout_weight="1"
 	    />
-	<android.support.v4.app.FragmentTabHost
+	<com.ai.xswdstudent.view.TabFragmentHost
+	    android:id="@android:id/tabhost"
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:background="#f78642"
+	    >
+	    
+	    <FrameLayout 
+	        android:id="@android:id/tabcontent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="0"
+	        />
+	</com.ai.xswdstudent.view.TabFragmentHost>
+<!-- 	<android.support.v4.app.FragmentTabHost
 	    android:id="@android:id/tabhost"
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
@@ -23,5 +37,5 @@
             android:layout_height="0dp"
             android:layout_weight="0"
 	        />
-	</android.support.v4.app.FragmentTabHost>
+	</android.support.v4.app.FragmentTabHost> -->
 </LinearLayout>
