--- a/res/layout/activity_base_top.xml
+++ b/res/layout/activity_base_top.xml
@@ -7,7 +7,7 @@
     
 	<LinearLayout 
 	    android:layout_width="fill_parent"
-	    android:layout_height="40dp"
+	    android:layout_height="50dip"
 	    android:background="#f78642"
 	    android:orientation="horizontal"
 	    >
