--- a/res/layout/fragment_home_top.xml
+++ b/res/layout/fragment_home_top.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="40dp"
+    android:layout_height="50dip"
     android:orientation="vertical" >
     
 	<LinearLayout 
 	    android:layout_width="fill_parent"
-	    android:layout_height="40dp"
+	    android:layout_height="50dip"
 	    android:background="#f78642"
 	    android:orientation="horizontal"
 	    >
