--- a/res/layout/fragment_msg_top.xml
+++ b/res/layout/fragment_msg_top.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="40dp"
+    android:layout_height="50dip"
     android:layout_width="fill_parent"
     android:background="#f78642"
     android:orientation="vertical" >
