--- a/res/layout/fragment_home.xml
+++ b/res/layout/fragment_home.xml
@@ -13,6 +13,7 @@
 		android:layout_width="fill_parent"
 		android:layout_height="fill_parent"
 		android:scrollbars="none"
+		android:background="@drawable/home_bg"
 	  >     
 	  <LinearLayout 
 	      android:layout_width="fill_parent"
