--- a/res/layout/fragment_home.xml
+++ b/res/layout/fragment_home.xml
@@ -180,7 +180,8 @@
 		    android:orientation="horizontal"
 		    android:layout_margin="10dp"
 		    >
-		    <Button 
+		    <Button
+				android:id="@+id/btnscan"
 		        android:layout_width="0dp"
 		        android:layout_height="fill_parent"
 		        android:layout_weight="1"
@@ -193,6 +194,7 @@
 		        android:background="@drawable/txt_smsk_selector"
 		        />
 		    <Button 
+		        android:id="@+id/btnhomework"
 		        android:layout_width="0dp"
 		        android:layout_height="fill_parent"
 		        android:layout_weight="1"
