--- a/res/layout/activity_base_top.xml
+++ b/res/layout/activity_base_top.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+	android:layout_height="50dip"
     android:background="@color/white"
     android:orientation="vertical" >
     
@@ -40,10 +40,16 @@
 	        />
 	    <TextView 
 	        android:id="@+id/txtbase_top_right"
-	        android:layout_height="fill_parent"
+	        android:layout_height="wrap_content"
 	        android:layout_width="0dp"
 	        android:layout_weight="1"
 	        android:textColor="#fff"
+	        android:gravity="center"
+	        android:textSize="12sp"
+	        android:layout_gravity="center"
+	        android:layout_marginRight="10dp"
+	        android:paddingTop="5dp"
+	        android:paddingBottom="5dp"
 	        />
 	</LinearLayout>
 </LinearLayout>
