--- a/res/layout/fragment_mine_top.xml
+++ b/res/layout/fragment_mine_top.xml
@@ -8,7 +8,7 @@
 	        android:id="@+id/toptitle"
 	        android:layout_width="fill_parent"
 	        android:layout_height="fill_parent"
-	        android:text="消息"
+	        android:text="我的"
 	        android:gravity="center"
 	        android:textColor="#fff"
 	        android:textSize="18sp"
