--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,5 +17,10 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     
-
+    <!-- 大部分页面都可能会用到的1dp的分割线 -->
+    <style name="dicator_line_1">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">#eee</item>
+    </style>
 </resources>
