--- a/res/layout/register_two.xml
+++ b/res/layout/register_two.xml
@@ -14,10 +14,10 @@
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="58px"
-            android:layout_marginLeft="40px"
-            android:layout_marginRight="40px"
-            android:layout_marginTop="32px"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="40dp"
             android:background="@drawable/frame_white"
             android:orientation="horizontal" >
 
@@ -25,13 +25,13 @@
                 android:id="@+id/et_register_vertification"
                 style="@null"
                 android:layout_width="0dp"
-                android:layout_height="58px"
+                android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1.0"
                 android:background="@null"
                 android:hint="@string/vertification"
                 android:imeOptions="actionNext"
-                android:paddingLeft="15px"
+                android:paddingLeft="18dp"
                 android:singleLine="true"
                 android:textColor="#919191"
                 android:textSize="24px" />
@@ -44,8 +44,8 @@
 
                 <Button
                     android:id="@+id/btn_register_vertification"
-                    android:layout_width="60dip"
-                    android:layout_height="40dip"
+                    android:layout_width="60dp"
+                    android:layout_height="40dp"
                     android:background="@color/gray"
                     android:gravity="center"
                     android:padding="3px"
@@ -67,10 +67,10 @@
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="58px"
-            android:layout_marginLeft="40px"
-            android:layout_marginRight="40px"
-            android:layout_marginTop="30px"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="30dp"
             android:background="@drawable/frame_white"
             android:orientation="horizontal" >
 
@@ -78,18 +78,18 @@
                 android:id="@+id/et_register_password"
                 style="@null"
                 android:layout_width="0dp"
-                android:layout_height="58px"
+                android:layout_height="40dp"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1.0"
                 android:background="@null"
                 android:hint="@string/repeat_password"
                 android:imeOptions="actionNext"
                 android:inputType="textPassword"
-                android:paddingLeft="15px"
+                android:paddingLeft="10dp"
                 android:singleLine="true"
                 android:text=""
                 android:textColor="#919191"
-                android:textSize="24px" />
+                android:textSize="18sp" />
         </LinearLayout>
 
         <View
