--- a/res/layout/fragment_mine.xml
+++ b/res/layout/fragment_mine.xml
@@ -588,11 +588,13 @@
                 android:background="#DDD" />
 
             <LinearLayout
+                
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#EEE" >
 
                 <Button
+                    android:id="@+id/loginout"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_margin="20dip"
