--- a/res/layout/register_one.xml
+++ b/res/layout/register_one.xml
@@ -18,30 +18,24 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginTop="60px"
         android:background="#e1e1e1"
         android:orientation="horizontal" >
 
         <LinearLayout
             android:layout_width="130px"
-            android:layout_height="58px"
-            android:layout_margin="1px"
-            android:layout_marginTop="1px"
+            android:layout_height="40dp"
             android:background="#efefe5"
             android:gravity="center_horizontal" >
 
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:background="#efefe5"
-                android:clickable="false"
-                android:focusable="false"
-                android:padding="8dp"
-                android:text="+86"
+            <TextView
+                 android:gravity="center"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:text="     +86"
                 android:textColor="#48b0ef"
-                android:textSize="18px" />
+                android:textSize="18sp" />
         </LinearLayout>
 
         <View
@@ -52,20 +46,21 @@
         <EditText
             android:id="@+id/et_number"
             android:layout_width="fill_parent"
-            android:layout_height="58px"
+            android:layout_height="40dp"
             android:layout_gravity="center_vertical"
             android:background="#efefe5"
             android:hint="请输入手机号码"
             android:paddingLeft="8dp"
+            android:layout_weight="1"
             android:padding="5dp"
             android:textColor="#919191"
-            android:textSize="18px" />
+            android:textSize="18sp" />
     </LinearLayout>
 
     <Button
         android:id="@+id/btn_register_first_submit"
         android:layout_width="fill_parent"
-        android:layout_height="60px"
+        android:layout_height="40dp"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="20px"
         android:layout_marginRight="20px"
@@ -73,7 +68,7 @@
         android:background="#48b0ef"
         android:text="获取验证码"
         android:textColor="#ffffff"
-        android:textSize="18px" />
+        android:textSize="18sp" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -93,10 +88,10 @@
             android:gravity="left|center_vertical"
             android:text="我已同意并阅读"
             android:textColor="#000000"
-            android:textSize="16px" />
+            android:textSize="16sp" />
 
         <TextView
-            
+              android:textSize="16sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="《寻师问道使用条款》"
